--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -43,8 +43,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
   <tbody>
     <tr>
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Source<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>CycleGAN-EVC<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>StarGAN-EVC<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>CycleGAN<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>StarGAN<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>VITS (operating VL here)<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-FL (proposed)<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL (proposed)<strong></td>
