--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -45,7 +45,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Source<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>CycleGAN<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>StarGAN<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>VITS (operating VL here)<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>VITS (VL approach shown here)<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-FL (proposed)<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL (proposed)<strong></td>
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target<strong></td>
