--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -98,6 +98,28 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000363.wav"></audio></td>
 	  <td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
     </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000014.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/cyclegan_0009_000364.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2092003412.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/vits_0009_000364.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_fl_0009_000364.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000364.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000364.wav"></audio></td>
+	  <td style="font-size:95%">谁你也不认识，我很乐意帮助你。(English: You don't know anybody, but I'm more than willing to help you.)</td>
+    </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000019.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/cyclegan_0009_000369.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2092003412.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/vits_0009_000369.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_fl_0009_000369.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000369.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000369.wav"></audio></td>
+	  <td style="font-size:95%">不就是你嘛，为什么要偷笑来。(English: Isn't it just you? Why are you sneaking a laugh?)</td>
+    </tr>
 		
     <tr>
     	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Happy</th>
