--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -168,6 +168,28 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000713.wav"></audio></td>
 	  <td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
     </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000002.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/cyclegan_0009_000702.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/vits_0009_000702.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_fl_0009_000702.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_vl_0009_000702.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000702.wav"></audio></td>
+	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+    </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000017.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/cyclegan_0009_000717.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/vits_0009_000717.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_fl_0009_000717.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_vl_0009_000717.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000717.wav"></audio></td>
+	  <td style="font-size:95%">很快你上大学就用得到了。(English: You will need it as soon as you enter university.)</td>
+    </tr>
 		
     <tr>
     	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Sad</th>
