--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -238,6 +238,28 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001063.wav"></audio></td>
 	  <td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
     </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000008.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/cyclegan_0009_001058.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/vits_0009_001058.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_fl_0009_001058.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_vl_0009_001058.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001058.wav"></audio></td>
+	  <td style="font-size:95%">沙尘暴好像给每个人都带来了麻烦！(English: The sandstorm seems to have brought trouble to everyone!)</td>
+    </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000016.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/cyclegan_0009_001066.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/vits_0009_001066.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_fl_0009_001066.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_vl_0009_001066.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001066.wav"></audio></td>
+	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
+    </tr>
 		
     <tr>
     	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Surprise</th>
@@ -285,6 +307,28 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001413.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001413.wav"></audio></td>
 	  <td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
+    </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000002.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/cyclegan_0009_001402.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/vits_0009_001402.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_fl_0009_001402.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001402.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001402.wav"></audio></td>
+	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+    </tr>
+    <tr>
+        <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000014.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/cyclegan_0009_001414.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/vits_0009_001414.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_fl_0009_001414.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001414.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001414.wav"></audio></td>
+	  <td style="font-size:95%">谁你也不认识，我很乐意帮助你。(English: You don't know anybody, but I'm more than willing to help you.)</td>
     </tr>
 		
     </tbody>
