--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -113,7 +113,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000019.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/cyclegan_0009_000369.wav"></audio></td>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/stargan_0009_000369.wavv"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/stargan_0009_000369.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/vits_0009_000369.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_fl_0009_000369.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000369.wav"></audio></td>
