--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -335,7 +335,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 </table>
 
 
-<h3>Visualization of synthesized waveform.<a name="Visualization"></a></h2>
+<h3>Visualization of converted waveform.<a name="Visualization"></a></h2>
 <p> 
 To further show the effectiveness of our method, we visualize the spectrogram of testing clips (Neutral-to-Happy shown here). From top to bottom are the ground truth spectrogram, the spectrogram converted by the original VITS method, and the spectrogram converted by proposed PAVITS method. It is readily apparent that the spectrogram converted by PAVITS exhibits finer details in prosody variations within the pertinent frequency bands, while simultaneously preserving descriptive information for other frequency bands.
  </p>
