--- a/EINet4EVC/index.html
+++ b/EINet4EVC/index.html
@@ -487,7 +487,7 @@ Realistic emotional voice conversion (EVC) aims to enhance emotional diversity o
 To showcase the controllability of emotional intensity, we visualize pitch and energy tracks of voicing parts in testing clips (from neutral to happy). It can be observed that as emotional intensity increases, i.e., the induction of emotional states progresses from weak to strong, there is a concurrent broadening of pitch fluctuation and an elevation in peak energy.
  </p>
 
-  <center><img src='fig/spec.jpg' width=800px></center>
+  <center><img src='fig/ana_in_sample.jpg' width=800px></center>
 <br><br>
 
 <h3>Visualization of converted waveform.<a name="Visualization2"></a></h3>
@@ -495,7 +495,7 @@ To showcase the controllability of emotional intensity, we visualize pitch and e
 Furthermore, we presents synthesized Mel-spectrograms with F0 contours, demonstrating that with an increase in emotional intensity, the acoustic variation becomes more pronounced, coupled with more short pauses. This implies that EINet can adaptively  convey intrinsic emotional states based on controllable emotional intensity, achieving optimal outcomes in both intonation and rhythm synthesis.
  </p>
 
-  <center><img src='fig/spec.jpg' width=800px></center>
+  <center><img src='fig/mel_sample.jpg' width=800px></center>
 <br><br>
 
       <footer class="site-footer">
