--- a/EINet4EVC/index.html
+++ b/EINet4EVC/index.html
@@ -482,7 +482,7 @@ Realistic emotional voice conversion (EVC) aims to enhance emotional diversity o
     </tbody>
 </table>
 
-<h3>Visualization of pitch and energy tracks.<a name="Visualization1"></a></h3>
+<h3>Visualization of pitch and energy tracks.<a name="Visualization_pe"></a></h3>
 <p> 
 To showcase the controllability of emotional intensity, we visualize pitch and energy tracks of voicing parts in testing clips (from neutral to happy). It can be observed that as emotional intensity increases, i.e., the induction of emotional states progresses from weak to strong, there is a concurrent broadening of pitch fluctuation and an elevation in peak energy.
  </p>
@@ -490,7 +490,7 @@ To showcase the controllability of emotional intensity, we visualize pitch and e
   <center><img src='fig/ana_in_sample.jpg' width=800px></center>
 <br><br>
 
-<h3>Visualization of converted waveform.<a name="Visualization2"></a></h3>
+<h3>Visualization of converted audios at different emotional intensities.<a name="Visualization_ca"></a></h3>
 <p> 
 Furthermore, we presents synthesized Mel-spectrograms with F0 contours, demonstrating that with an increase in emotional intensity, the acoustic variation becomes more pronounced, coupled with more short pauses. This implies that EINet can adaptively  convey intrinsic emotional states based on controllable emotional intensity, achieving optimal outcomes in both intonation and rhythm synthesis.
  </p>
