--- a/ChameleonVoice/index.html
+++ b/ChameleonVoice/index.html
@@ -181,6 +181,59 @@
     </tbody>
 </table>
 
+<table>
+  <tbody>
+    <tr>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Source (Speaker A)<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>ChameleonVoice (proposed)<strong></td>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target (Speaker A)<strong></td>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Source (Speaker B)<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>ChameleonVoice (proposed)<strong></td>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target (Speaker B)<strong></td>
+	<td style="text-align: center; width: 500px;" rowspan=1><strong>Text<strong></td>
+    </tr>
+		
+    <tr>
+        <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0005_000001.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0005_001051.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0005_001051.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000001.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0009_001051.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001051.wav"></audio></td>
+    	<td style="font-size:95%">打远一看，它们的确很是美丽。(English: At a distance, they indeed appear very beautiful.)</td>
+    </tr>
+    <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0005_000004.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0005_001054.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0005_001054.wav"></audio></td>
+                  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000004.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0009_001054.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001054.wav"></audio></td>
+	  <td style="font-size:95%">不管怎么说，主队好像是志在夺魁。(English: Anyway, it seems like the home team is determined to win the championship.)</td>
+
+    </tr>
+    <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0005_000002.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0005_001402.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0005_001402.wav"></audio></td>
+            <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000002.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0009_001402.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001402.wav"></audio></td>
+	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+
+    </tr>
+    <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0005_000005.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0005_001405.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0005_001405.wav"></audio></td>
+            <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000005.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0009_001405.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001405.wav"></audio></td>
+	  <td style="font-size:95%">我们乘船漂游了三峡，真是刺激。(English: We took a boat trip through the Three Gorges, which was truly thrilling.)</td>
+
+    </tr>		
+    </tbody>
+</table>
 
 <h3>Visualization of converted waveform.<a name="Visualization"></a></h3>
 <p> 
